<resources>
  <!-- Default App Name -->
  <string name="app_name">Yummly</string>

  <!-- To toggle the open close button of nav drawer -->
  <string name="nav_open">Open</string>
  <string name="nav_close">Close</string>

  <!-- String values for Navigation Drawer -->
  <string name="viewSubtitle">View Recipes</string>
  <string name="viewAll">All Recipes</string>
  <string name="filterRecipe">Filter Recipes</string>
  <string name="myRecipe">My Recipes</string>

  <string name="helpOpt">Help</string>
  <string name="about">About Us</string>

  <!-- Toast Message for adding food -->
  <string name="addTitle">Add New Food</string>

  <!-- Hints and Titles for the Add Food/Recipe Screen -->
  <string name="nameHint">Food Name</string>
  <string name="imageHint">Select Food Image...</string>

  <string name="originTitle">Origin</string>
  <string name="ingredientsTitle">Ingredients</string>
  <string name="instructionsTitle">Instructions</string>

  <string name="ingredientsHint">Add your ingredients here...</string>
  <string name="instructionsHint">Add your instructions here...</string>

  <string name="cancelBtnTitle">Cancel</string>
  <string name="saveBtnTitle">Save Food</string>

  <!-- Placeholder for FoodList item -->
  <string name="foodPlacehold">FOOD NAME</string>

  <!-- String values for the About Us Page -->
  <string name="companyName">KurtIc Dynamics</string>
  <string name="kurticDesc">  Where developers paint their imagination, turning abstract ideas into functional reality.
                                Each line is a stroke, and every bug is an opportunity to refine the masterpiece.
                                Embrace the challenge, for in the realm of coding,
                                every keystroke is a brushstroke,
                                crafting the future of technology </string>


  <string name="devTitle">Developers</string>
  <string name="dev1">Kurt Robin P. Colonia</string>
  <string name="dev2">Dominic O. Ramos</string>

  <string name="footer">This app is created with:</string>

  <!-- Help Screen string values -->
  <string name="helpTitle">User Manual</string>
  <string name="help1">Adding your Recipes</string>
  <string name="help2">Editing your Recipes</string>
  <string name="help3">Deleting your Recipes</string>
  <string name="help4">Explore All Recipes:</string>
  <string name="help5">Filter Recipes by Origin:</string>
  <string name="help6">Find Your Own Creations - "My Recipe":</string>
  <string name="editTitle">Edit Recipe</string>

  <!-- Filter Title -->
  <string name="filterTitle">Filter:</string>

  <!-- Food origin string array -->
  <string-array name="recipeOrigin">
    <item>Choose Food\'s Country of Origin</item>
    <item>Italian</item>
    <item>Chinese</item>
    <item>Indian</item>
    <item>Mexican</item>
    <item>Japanese</item>
    <item>Greek</item>
    <item>Thai</item>
    <item>Moroccan</item>
    <item>Lebanese</item>
    <item>American</item>
    <item>Brazilian</item>
    <item>Vietnamese</item>
    <item>Turkish</item>
    <item>Filipino</item>
  </string-array>

  <string-array name="filterOrigin">
    <item>Show All</item>
    <item>Italian</item>
    <item>Chinese</item>
    <item>Indian</item>
    <item>Mexican</item>
    <item>Japanese</item>
    <item>Greek</item>
    <item>Thai</item>
    <item>Moroccan</item>
    <item>Lebanese</item>
    <item>American</item>
    <item>Brazilian</item>
    <item>Vietnamese</item>
    <item>Turkish</item>
    <item>Filipino</item>
  </string-array>

  <!-- Edit Screen string values -->
  <string name="editBtn">Update Recipe</string>
  <string name="deleteBtn">Delete Recipe</string>

  <!-- Login and Registration string values -->
  <string name="usernameHint">Username</string>
  <string name="emailHint">Email Address</string>
  <string name="passwordHint">Password</string>
  <string name="confirmPassHint">Confirm Password</string>
  <string name="click_to_login">Click to Login</string>
  <string name="click_to_register">Click to Register</string>
  <string name="accountGrp">Account</string>
  <string name="login">Login</string>
  <string name="register">Register</string>
  <string name="logout">Logout</string>

  <!-- Terms of Service and Privacy Policy -->
  <string name="tosTitle">Terms of Service</string>

  <string name="privPolTitle">Privacy Policy</string>


</resources>