<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fillViewport="true">


  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <com.google.android.material.card.MaterialCardView
      android:id="@+id/titleCardView"
      android:layout_width="0dp"
      android:layout_height="100dp"
      android:layout_margin="15dp"
      app:cardBackgroundColor="@color/yummlyYellow"
      app:cardCornerRadius="15dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:strokeColor="@color/yummlyBrown"
      app:strokeWidth="5dp">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
          android:id="@+id/imageView"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:scaleType="centerCrop"
          android:src="@drawable/header" />

        <androidx.cardview.widget.CardView
          android:layout_width="0dp"
          android:layout_height="0dp"
          app:cardBackgroundColor="@color/translucentBlack"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      </androidx.constraintlayout.widget.ConstraintLayout>

      <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/helpTitle"
        android:textColor="@color/yummlyWhite"
        android:textSize="28sp"
        android:textStyle="bold" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
      android:id="@+id/addHelpCard"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="15dp"
      app:cardBackgroundColor="@color/yummlyWhite"
      app:cardCornerRadius="15dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/titleCardView"
      app:strokeColor="@color/yummlyRed"
      app:strokeWidth="5dp">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <TextView
          android:id="@+id/addHelpTitle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="5dp"
          android:text="@string/help1"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />
        <ImageView
          android:id="@+id/help1Img"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/addHelpTitle"
          app:srcCompat="@drawable/helpone" />
      </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
      android:id="@+id/editHelpCard"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="15dp"
      app:cardBackgroundColor="@color/yummlyWhite"
      app:cardCornerRadius="15dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/addHelpCard"
      app:strokeColor="@color/yummlyRed"
      app:strokeWidth="5dp">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <TextView
          android:id="@+id/editHelpTitle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="5dp"
          android:text="@string/help2"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

        <ImageView
          android:id="@+id/help2Img"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/editHelpTitle"
          app:srcCompat="@drawable/helptwo" />
      </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
      android:id="@+id/deleteHelpCard"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="15dp"
      app:cardBackgroundColor="@color/yummlyWhite"
      app:cardCornerRadius="15dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/editHelpCard"
      app:strokeColor="@color/yummlyRed"
      app:strokeWidth="5dp">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <TextView
          android:id="@+id/deleteHelpTitle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="5dp"
          android:text="@string/help3"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

        <ImageView
          android:id="@+id/help3Img"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/deleteHelpTitle"
          app:srcCompat="@drawable/helpthree" />
      </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
      android:id="@+id/filterHelpCard"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="15dp"
      app:cardBackgroundColor="@color/yummlyWhite"
      app:cardCornerRadius="15dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/deleteHelpCard"
      app:strokeColor="@color/yummlyRed"
      app:strokeWidth="5dp">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <TextView
          android:id="@+id/filterHelpTitle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="5dp"
          android:text="@string/help5"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

        <ImageView
          android:id="@+id/help5Img"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/filterHelpTitle"
          app:srcCompat="@drawable/helpfive" />
      </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
      android:id="@+id/viewAllHelpCard"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="15dp"
      app:cardBackgroundColor="@color/yummlyWhite"
      app:cardCornerRadius="15dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/filterHelpCard"
      app:strokeColor="@color/yummlyRed"
      app:strokeWidth="5dp">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <TextView
          android:id="@+id/viewAllHelpTitle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="5dp"
          android:text="@string/help4"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

        <ImageView
          android:id="@+id/help4Img"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/viewAllHelpTitle"
          app:srcCompat="@drawable/helpfour" />
      </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
      android:id="@+id/userRecipeHelpCard"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="15dp"
      app:cardBackgroundColor="@color/yummlyWhite"
      app:cardCornerRadius="15dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/viewAllHelpCard"
      app:strokeColor="@color/yummlyRed"
      app:strokeWidth="5dp">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <TextView
          android:id="@+id/userRecipeHelpTitle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="5dp"
          android:text="@string/help6"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

        <ImageView
          android:id="@+id/help6Img"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/userRecipeHelpTitle"
          app:srcCompat="@drawable/helpsix" />
      </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

  </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>